# elements-miniscript

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: fuzz.yml  rust.yml
bitcoind-tests/: Cargo.toml
bitcoind-tests/tests/: test_arith.rs  test_cpp.rs  test_csfs.rs  test_desc.rs  test_introspect.rs
bitcoind-tests/tests/setup/: mod.rs  test_util.rs
contrib/: crates.sh  extra_tests.sh  test.sh  test_vars.sh
doc/: extension_spec.md
examples/: apo.rs  htlc.rs  parse.rs  psbt_sign_finalize.rs  sign_multisig.rs  taproot.rs  verify_tx.rs  xpub_descriptors.rs
fuzz/: Cargo.toml  README.md  fuzz.sh  generate-files.sh
fuzz/fuzz_targets/: compile_descriptor.rs  parse_descriptor.rs  parse_descriptor_secret.rs  roundtrip_concrete.rs  roundtrip_confidential.rs  roundtrip_descriptor.rs  roundtrip_miniscript_script.rs  roundtrip_miniscript_str.rs  roundtrip_semantic.rs
src/: expression.rs  lib.rs  macros.rs  pub_macros.rs  simplicity.rs  test_utils.rs  util.rs
src/confidential/: bare.rs  elip151.rs  mod.rs  slip77.rs
src/descriptor/: bare.rs  blinded.rs  checksum.rs  key.rs  mod.rs  pegin.rs  pretaproot.rs  segwitv0.rs  sh.rs  sortedmulti.rs  tr.rs
src/descriptor/covenants/: cov.rs  error.rs  mod.rs  satisfy.rs  script_internals.rs
src/descriptor/csfs_cov/: cov.rs  mod.rs  satisfy.rs  script_internals.rs
src/descriptor/pegin/: dynafed_pegin.rs  legacy_pegin.rs  mod.rs
src/extensions/: arith.rs  csfs.rs  index_ops.rs  introspect_ops.rs  mod.rs  outputs_pref.rs  param.rs  tx_ver.rs
src/interpreter/: error.rs  inner.rs  mod.rs  stack.rs
src/miniscript/: analyzable.rs  astelem.rs  context.rs  decode.rs  ext.rs  iter.rs  lex.rs  limits.rs  mod.rs  ms_tests.rs  satisfy.rs
src/miniscript/types/: correctness.rs  extra_props.rs  malleability.rs  mod.rs
src/policy/: compiler.rs  concrete.rs  mod.rs  semantic.rs
src/psbt/: finalizer.rs  mod.rs
src/pset/: finalizer.rs  mod.rs
tests/: test_arith.rs  test_cpp.rs  test_csfs.rs  test_desc.rs  test_introspect.rs
tests/setup/: mod.rs  test_util.rs
