[package]
name = "elements-miniscript"
version = "0.3.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>, Sanket Kanjalkar <sanket1729@gmail.com>"]
repository = "https://github.com/ElementsProject/elements-miniscript"
description = "Elements Miniscript: Miniscript, but for elements"
license = "CC0-1.0"
keywords = [ "crypto", "bitcoin", "miniscript", "script" ]
readme = "README.md"
homepage = "https://github.com/rust-bitcoin/rust-miniscript/"
edition = "2018"

[features]
compiler = []
trace = []

serde = ["actual-serde", "bitcoin/serde", "elements/serde"]
rand = ["bitcoin/rand"]
base64 = ["bitcoin/base64", "elements/base64"]

[dependencies]
bitcoin = "0.32.0"
elements = "0.25.0"
bitcoin-miniscript = { package = "miniscript", version = "12.0" }
simplicity = { package = "simplicity-lang", version = "0.3.0", optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
actual-rand = { package = "rand", version = "0.8.4"}
serde_test = "1.0.147"
bitcoin = { version = "0.32.0", features = ["base64"] }
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
actual-base64 = { package = "base64", version = "0.13.0" }

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(miniscript_bench)'] }

[[example]]
name = "htlc"
required-features = ["compiler"]

[[example]]
name = "parse"

[[example]]
name = "sign_multisig"

[[example]]
name = "verify_tx"

[[example]]
name = "xpub_descriptors"

[[example]]
name = "taproot"
required-features = ["compiler"]

[[example]]
name = "psbt_sign_finalize"
required-features = ["base64"]

[workspace]
members = ["bitcoind-tests", "fuzz"]
