[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements-miniscript = { path = "../" }
elementsd = { version = "0.9.0" }
actual-rand = { package = "rand", version = "0.8.4" }
secp256k1 = { version = "0.28.1", features = ["rand-std"] }
